--- a/src/AVOne.Server/Pages/App/Downloads/Components/TaskNavItem.razor
+++ b/src/AVOne.Server/Pages/App/Downloads/Components/TaskNavItem.razor
@@ -1,6 +1,6 @@
 ﻿@using System.Timers;
 @using Timer = System.Timers.Timer;
-@inherits ProCompontentBase;
+@inherits ProComponentBase;
 @implements IDisposable;
 <MListItem Exact Style="height:38px;" Class="px-6" Link Href="@Href">
     <ItemContent>
