--- a/src/AVOne.Server/Pages/App/SystemLogs/SystemLogs.razor
+++ b/src/AVOne.Server/Pages/App/SystemLogs/SystemLogs.razor
@@ -1,5 +1,5 @@
 ﻿@page "/app/system/logs"
-@inherits ProCompontentBase
+@inherits ProComponentBase
 @using AVOne.Impl.Facade;
 @using AVOne.Models.Systems;
 
