--- a/src/AVOne.Server/Shared/PageTabs.razor
+++ b/src/AVOne.Server/Shared/PageTabs.razor
@@ -1,27 +1,35 @@
-﻿@inherits ProCompontentBase
+﻿@inherits ProComponentBase
 @inject NavHelper NavHelper
 
-<MPageTabs Class="px-6 pagetabs" Items="NavHelper.PageTabItems">
-    <TabContent>
-        <MTab Href="@context.Item.Url" Class="px-6 rounded-t-xl m-page_tab" ActiveClass="m-page_tab_active"
-            IsActive=context.IsActive Ripple="false" @attributes="@context.Attrs">
-            <MIcon Size=20>@context.Item.Icon</MIcon>
-            <span class="mx-2 text-capitalize @(context.IsActive ? "neutral--text" : "")"
-                style="min-width:46px;">@T(context.Item.Name)</span>
-            @if (context.Item.Closable)
-            {
-                <MIcon Size=16 OnClick="context.Close" OnClickStopPropagation OnClickPreventDefault>mdi-close</MIcon>
-            }
-        </MTab>
-    </TabContent>
+<PPageTabs @ref="PPageTabs"
+           TabClass="px-6 rounded-t-xl"
+           TabOptions="@TabOptions"
+           Ripple="false"
+           HideSlider
+           SelfPatterns="@SelfPatterns">
     <ChildContent>
-        <div class="mt-6">
-            @ChildContent
-        </div>
+        @ChildContent
     </ChildContent>
-</MPageTabs>
+</PPageTabs>
 
 @code {
+
+    public PPageTabs? PPageTabs { get; private set; }
+
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
+
+    [Parameter]
+    public IEnumerable<string>? SelfPatterns { get; set; }
+
+    private TabOptions TabOptions(PageTabPathValue value)
+    {
+        var item = NavHelper.PageTabItems.FirstOrDefault(u => value.IsMatch(u.Href));
+        var title = T(item?.Title);
+        var icon = item?.Icon;
+        var titleClass = $"mx-2 text-capitalize {(value.Selected ? "neutral--text" : "")}";
+
+        return new TabOptions(title, icon, titleClass);
+    }
+
 }
