--- a/src/AVOne.Server/_Imports.razor
+++ b/src/AVOne.Server/_Imports.razor
@@ -14,3 +14,4 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Routing
 @using Masa.Blazor.Presets;
+@using System.Globalization;
