--- a/src/AVOne.Server/Pages/App/Settings/Components/AvaliablePlugins.razor
+++ b/src/AVOne.Server/Pages/App/Settings/Components/AvaliablePlugins.razor
@@ -1,16 +1,16 @@
- @inherits ProCompontentBase
+ @inherits ProComponentBase
  @using AVOne.Common.Plugins;
 @using AVOne.Models.Updates;
 
  <MContainer Fluid>
-                    <MRow Dense>
+            <MRow Dense>
                         @foreach (var package in PackageInfos)
                     {
             <MCol key="@package.Id" Xl="2" Lg="3" Md="3" Sm="4">
                 <MCard Class="mx-auto my-2" MaxWidth="468" Elevation=4 OnClick="()=>ShowPackage(package)">
                                     @if (!string.IsNullOrWhiteSpace(package.ImageUrl))
                                     {
-                                        <MImage Src=@package.ImageUrl Class="white--text align-end" MaxHeight="150"  Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)">
+                                        <MImage Src="img/logo/material.jpg" LazySrc=@package.ImageUrl Class="white--text align-end" MaxHeight="150" Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)">
                                             <MCardTitle>@package.Name</MCardTitle>
                                         </MImage>
                                     }
@@ -26,7 +26,9 @@
                             </MCol>
                     }
                 </MRow>
-                <PluginPackage SelectItem="selectedPackage" Value="_PackageDetailvisible" ValueChanged="val=>_PackageDetailvisible = val" />
+                @if(selectedPackage is not null){
+                    <PluginPackage SelectItem="selectedPackage" Value="_PackageDetailvisible" ValueChanged="val=>_PackageDetailvisible = !_PackageDetailvisible" />
+                }              
 </MContainer>
 
 @code {
