--- a/src/AVOne.Server/Pages/App/Settings/Components/PluginsRepository.razor
+++ b/src/AVOne.Server/Pages/App/Settings/Components/PluginsRepository.razor
@@ -1,13 +1,13 @@
- @inherits ProCompontentBase
+ @inherits ProComponentBase
  @using AVOne.Common.Plugins;
 
-<div class="md-flex flex-no-wrap justify-start pt-6 pl-6">
+<div class="d-flex flex-row justify-start align-center pt-2 pl-6">
                     <span class="text-h5">@T("Settings.Plugin.PluginRepository.Title")</span>                   
                         <MDialog
         @bind-Value="addRepoDialog"
         Width="500">
         <ActivatorContent>
-            <MButton  @attributes="@context.Attrs" Outlined Class="ml-2" Icon><MIcon Dark>mdi-plus</MIcon></MButton>
+            <MButton @attributes="@context.Attrs" Class="ml-4" Small Outlined Color="indigo" Icon><MIcon Dark>mdi-plus</MIcon></MButton>
              </ActivatorContent>
         <ChildContent>
                <MCard Elevation="4">
@@ -37,8 +37,8 @@
                     </ChildContent>
     </MDialog>
                 </div>
-<MList TwoLine Outlined
-       Subheader>
+<MList TwoLine 
+       Subheader class="mt-4">
                 @foreach (var repo in PluginRepositories)
                 {
                     <MListItem Class="pl-6">
