--- a/src/AVOne.Server/Pages/_Layout.cshtml
+++ b/src/AVOne.Server/Pages/_Layout.cshtml
@@ -4,7 +4,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,9 +11,9 @@
     <link rel="shortcut icon" href="img/logo/favicon.ico">
     <base href="~/" />
     <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet">
-    <link href="css/materialdesign/v6.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <link href="css/material/icons.css" rel="stylesheet">
-    <link href="css/fontawesome/v5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.masastack.com/npm/@("@mdi")/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://cdn.masastack.com/npm/materialicons/materialicons.css" rel="stylesheet">
+    <link href="https://cdn.masastack.com/npm/fontawesome/v5.0.13/css/all.css" rel="stylesheet">
     <link href="css/masa-blazor-pro.css" rel="stylesheet" />
     <link href="css/message.min.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
@@ -46,12 +45,6 @@
             window.QmsgDefaultLoader.close();
             Qmsg.closeAll();
         }
-    </script>
-    <script>
-        // disable context menu
-        //document.addEventListener('contextmenu', function (e) {
-        //    e.preventDefault();
-        //});
     </script>
 </body>
 
