--- a/src/AVOne.Server/Shared/Favorite.razor
+++ b/src/AVOne.Server/Shared/Favorite.razor
@@ -1,4 +1,4 @@
-﻿@inherits ProCompontentBase
+﻿@inherits ProComponentBase
 @inject GlobalConfig GlobalConfig;
 @inject NavigationManager Nav
 @inject NavHelper NavHelper
