--- a/src/AVOne.Server/Pages/App/Settings/Components/InstalledPlugins.razor
+++ b/src/AVOne.Server/Pages/App/Settings/Components/InstalledPlugins.razor
@@ -4,11 +4,11 @@
                     <MRow Dense>
                         @foreach (var item in Installed)
                     {
-            <MCol key="@item.Id" Xl="2" Lg="3" Md="3" Sm="4">
-                <MCard Class="mx-auto my-2" MaxWidth="468" Elevation=4>
+            <MCol key="@item.Id" Xl="3" Lg="3" Md="3" Sm="4">
+                <MCard Class="mx-auto my-2" MaxWidth="468" Elevation=2>
                                     @if (item.GetPluginInfo().HasImage)
                                     {
-                                        <MImage Src="img/logo/material.jpg" LazySrc="@GetPluginUrl(item)" Class="white--text align-end" MaxHeight="150" Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)">
+                                        <MImage LazySrc="img/logo/material.jpg" Src="@GetPluginUrl(item)" Class="white--text align-end" MaxHeight="150" Gradient="to bottom, rgba(0,0,0,.1), rgba(0,0,0,.5)">
                                         </MImage>
                                     }
                                     else
