--- a/src/AVOne.Server/Shared/Navigation.razor
+++ b/src/AVOne.Server/Shared/Navigation.razor
@@ -83,7 +83,7 @@
     [Inject]
     public MasaBlazor Masa { get; set; } = default!;
 
-    public bool? Visible { get; set; } = true;
+    public bool? Visible { get; set; } = false;
 
     public string ComputedNavigationClass => (GlobalConfig.NavigationStyle == NavigationStyles.Rounded ? "rounded-r-xl" : string.Empty);
 
