--- a/src/AVOne.Server/Pages/App/Downloads/Components/TaskDetail.razor
+++ b/src/AVOne.Server/Pages/App/Downloads/Components/TaskDetail.razor
@@ -99,7 +99,7 @@
     public EventCallback<bool?> ValueChanged { get; set; }
 
     [Parameter, EditorRequired]
-    public JobModel SelectItem { get; set; }
+    public JobModel? SelectItem { get; set; }
 
     private DownloadAVJob? _job;
 
